# App-rust

./: .gitignore  Cargo.toml  README.md  build.rs  deploy.sh  render-previews.sh
.github/workflows/: release.yml
installer/: slidr.nsi  slidr.wxs
src/: actuator.rs  autostart.rs  curve.rs  events.rs  glue.rs  keys.rs  keys_library.rs  led.rs  main.rs  model.rs  protocol.rs  serial.rs  storage.rs  tray.rs
src/audio/: mod.rs  null.rs  pulse.rs  wasapi.rs
ui/: app.slint
