[package]
name = "slidr"
version = "0.3.0"
edition = "2021"
description = "Cross-platform Arduino-based audio/macro pad controller"
license = "MIT"

[profile.release]
# Tuned for fast compiles (CI ≈ 2-3 min warm) with negligible runtime cost for
# this app: no fat LTO, parallel codegen. Bump back to lto="fat"/codegen-units=1
# only if you need the last few % of runtime perf in shipped binaries.
opt-level = 2
lto = false
codegen-units = 16
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

[build-dependencies]
slint-build = "1.16"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
embed-resource = "3"

[dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for button/slider "API call" actions and LED "API" state-check
# conditions (blocking, rustls TLS).
ureq = "2"
parking_lot = "0.12"
crossbeam-channel = "0.5"
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
once_cell = "1"
dirs = "5"

# Serial + hotplug
serialport = "4"

# UI — Slint with Material style
slint = { version = "1.16", default-features = false, features = ["std", "compat-1-2", "backend-winit", "renderer-femtovg"] }

# Build timestamp injected at compile time
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Key simulation (cross-platform)
enigo = "0.2"

# Cross-platform "open file/url"
open = "5"

# Native file dialog for "Browse…" buttons
rfd = "0.15"

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.28"
udev = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
# Direct dep so the `#[interface]` macro's `::windows_core` paths resolve; pinned
# to the same version `windows` re-exports as `windows::core` (shared types).
windows-core = "0.58"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Devices_FunctionDiscovery",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
] }
tray-icon = "0.19"
image = { version = "0.25", default-features = false, features = ["ico"] }
